--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "build:ui": "rm -rf dist && cd ../phonebook && npm install && npm run build && cp -r dist ../phonebook_backend/dist",
     "deploy:full": "npm run build:ui && git add . && git commit -m 'UI build' && git push",
     "test": "echo \"No test command yet\" && exit 1"
@@ -17,5 +19,11 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0"
   }
 }
